# EZ-CorridorKey

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  1-install-amd.bat  1-install.bat  1-install.sh  2-start.bat  2-start.sh  3-update.bat  3-update.sh  CHANGELOG.md  CONTRIBUTING.md  CorridorKey_DRAG_CLIPS_HERE_local.bat  CorridorKey_DRAG_CLIPS_HERE_local.sh  Dockerfile  Install_CorridorKey_Windows.bat  Install_GVM_Windows.bat  Install_VideoMaMa_Windows.bat  LICENSE  README.md  RunGVMOnly.sh  RunInferenceOnly.sh  SECURITY.md  cliff.toml  clip_manager.py  corridorkey-macos.spec  corridorkey.spec  device_utils.py  docker-compose.yml  install.sh  main.py  mise.toml  pyproject.toml  requirements.txt  ruff.toml  tasks.md  test_vram.py  test_vram_amd.py  ty.toml  (+1 more)
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  FUNDING.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: docs.yml  fresh-install-smoke.yml  local-gpu-qa.yml  pytest.yml  rocm-ci.yml  ruff.yml
BiRefNetModule/: wrapper.py
CorridorKeyModule/: README.md  __init__.py  backend.py  inference_engine.py  inference_engine_amd.py  mlx_inference_engine.py
CorridorKeyModule/core/: chroma_key.py  color_utils.py  mlx_model.py  model_transformer.py  native_ops.py
MatAnyone2Module/: wrapper.py
VideoMaMaInferenceModule/: LICENSE.md  README.md  __init__.py  inference.py  pipeline.py  requirements.txt
backend/: __init__.py  annotation_prompts.py  batch_scanner.py  clip_scanner.py  clip_state.py  error_reporting.py  errors.py  ffmpeg_tools.py  frame_io.py  job_queue.py  natural_sort.py  net_proxy.py  project.py  project_media.py  service.py  update_verify.py  validators.py
backend/ffmpeg_tools/: __init__.py  color.py  discovery.py  extraction.py  metadata.py  probe.py  stitching.py  streaming.py
backend/service/: __init__.py  apple_vision.py  core.py  frame_ops.py  helpers.py  inference.py  inference_parallel.py  model_manager.py  pipelines.py  pipelines_auto.py  pipelines_guided.py
corridorkey_native/: Cargo.toml  pyproject.toml
corridorkey_native/src/: color_convert.rs  lib.rs  plane_shuffle.rs
dev-docs/: COMMIT-LOG.md  USER-GUIDE.md
dev-docs/guides/: 1.6.7-color-space-tester-checklist.md  azure-gpu-installer-smoke.md  clip-pipeline.md  debug-log-bible.md  dvr-roundtrip-qa.md  local-gpu-qa.md  self-hosted-gpu-runner.md
docker/: Dockerfile  Dockerfile.rocm  README.md  docker-compose.yml  entrypoint-rocm-vnc.sh  entrypoint.sh  supervisord.conf
docs/: ROCm_PR_handoff.md  ROCm_Setup.md  index.md
docs/dev/: authoring-documentation.md  developer-setup.md
docs/i18n/: README.de.md  README.es.md  README.fr.md  README.hi.md  README.id.md  (+11 more)
gvm_core/: LICENSE.md  README.md  __init__.py  requirements.txt  wrapper.py
installers/: corridorkey-macos.spec  corridorkey-windows.spec  ez-corridorkey-macos.spec  ez-corridorkey-windows.spec
patches/: README-hiera-flashattention.md  hiera-flashattention-v1.patch
sam2_tracker/: __init__.py  wrapper.py
scripts/: bench_parallel_frames.py  benchmark_quality.py  build_macos.sh  build_windows.ps1  check_ffmpeg.py  ci_smoke.py  color_analysis.py  compare_quality.py  compare_upstream.py  compare_upstream_d2.py  detect_windows_torch_index.py  dvr_compare_frames.py  dvr_roundtrip_qa.py  gui_smoke_test.py  i18n_apply.py  i18n_sync.py  import_smoke_test.py  local_gpu_qa.py  open_installer_issue.py  profile_vram.py  sam2_smoke.py  setup_models.py  test_cuda_detect.bat  verify_torch_runtime.py
tests/: conftest.py  test_backend_output_contract.py  test_clip_state.py  test_color_utils.py  test_dialog_sizes.py  test_display_transform.py  test_dual_viewer_live_refresh.py  test_error_reporting.py  test_ffmpeg_tools.py  test_frame_index.py  test_frame_io.py  test_inference_engine_compile_fallback.py  test_inference_engine_init.py  test_invalid_format.py  test_job_queue_full.py  test_job_queue_phase4.py  test_language_detection.py  test_main_window_color_space.py  test_module_unicode_io.py  test_native_ops.py  test_natural_sort.py  test_no_raw_cv2_file_io.py  test_output_config.py  test_parameter_panel.py  test_pascal_cu130_diagnostic.py  test_preview_viewport_color_space.py  test_project.py  test_refiner_compile.py  test_report_issue_install_method.py  test_rocm_setup.py  test_run_update_xplat.py  test_sam2_wrapper.py  test_service.py  test_service_concurrency.py  test_service_import_compat.py  test_service_videomama_contract.py  test_session.py  test_setup_wizard_consent.py  test_thumbnail_worker.py  test_unicode_paths.py  (+4 more)
ui/: __init__.py  app.py  main_window.py  recent_sessions.py  shortcut_registry.py  state_labels.py
(+152 files in other folders)
