[project]
name = "corridorkey"
version = "1.9.1"
description = "AI Green Screen Keyer by Corridor Digital"
license = {text = "CC-BY-NC-SA-4.0"}
requires-python = ">=3.10,<3.14"
readme = "README.md"
dependencies = [
    "torch==2.9.1",
    "torchvision==0.24.1",
    "numpy",
    "opencv-python-headless",
    "OpenEXR>=3.4",
    "timm==1.0.24",
    "av",
    "diffusers",
    "easydict",
    "einops",
    "kornia",
    "imageio",
    "huggingface_hub",
    "peft",
    "Pillow",
    "PIMS",
    "setuptools",
    "tqdm",
    "accelerate",
    "transformers",
    "matplotlib",
    "nvidia-ml-py",
    "PySide6>=6.7.0",
    "triton-windows>=3.5,<3.6; sys_platform == 'win32'",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff"]
tracker = ["sam-2 @ git+https://github.com/facebookresearch/sam2.git"]
quality = [
    "scikit-image",
    "pytorch-msssim",
    "lpips",
]
mlx = ["corridorkey-mlx ; sys_platform == 'darwin' and python_version >= '3.11'"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend", "ui", "CorridorKeyModule", "gvm_core", "sam2_tracker", "VideoMaMaInferenceModule", "modules/MatAnyone2Module"]

[tool.hatch.build.targets.wheel.force-include]
"device_utils.py" = "device_utils.py"

[tool.hatch.build.targets.sdist.force-include]
"device_utils.py" = "device_utils.py"

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv.pip]
torch-backend = "auto"

[tool.uv.sources]
corridorkey-mlx = { git = "https://github.com/nikopueringer/corridorkey-mlx.git", tag = "v1.0.0" }

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "rocm: ROCm/HIP startup tests (mocked; no AMD GPU required)",
]

[tool.ruff]
target-version = "py310"
line-length = 100
extend-exclude = [
    ".venv",
    "build",
    "dist",
]

[tool.ruff.lint]
# Default rule set is E4, E7, E9, F (see Ruff docs). We only relax:
# E402 — lazy imports after env/path setup (GUI, clip_manager, upstream patterns).
# E701 — compound statements on one line in dense numeric / legacy code.
ignore = ["E402", "E701"]
