[project]
name = "corridorkey"
version = "2.1.2"
description = "AI Chroma Keyer by Corridor Digital"
license = {text = "CC-BY-NC-SA-4.0"}
requires-python = ">=3.10,<3.14"
readme = "README.md"
dependencies = [
    "torch==2.9.1",
    "torchvision==0.24.1",
    "numpy",
    "opencv-python-headless>=4.10,<5",  # 5.0 wheels dropped OpenEXR (#180)
    "OpenEXR>=3.4",
    "timm==1.0.24",
    "av",
    "diffusers",
    "easydict",
    "einops",
    "kornia",
    "imageio",
    "huggingface_hub",
    "socksio",  # socks5 proxy support for httpx model downloads
    "peft",
    "Pillow",
    "PIMS",
    "setuptools",
    "tqdm",
    "accelerate",
    "transformers",
    "matplotlib",
    "nvidia-ml-py",
    "PySide6>=6.7.0",
    "triton-windows>=3.5,<3.6; sys_platform == 'win32'",
    "cryptography>=43.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff"]
tracker = ["sam-2 @ git+https://github.com/facebookresearch/sam2.git@2b90b9f5ceec907a1c18123530e92e794ad901a4"]
quality = [
    "scikit-image",
    "pytorch-msssim",
    "lpips",
]
mlx = [
    "mlx>=0.30 ; sys_platform == 'darwin' and python_version >= '3.11'",
    "safetensors ; sys_platform == 'darwin' and python_version >= '3.11'",
    "pyobjc-framework-Vision ; sys_platform == 'darwin' and python_version >= '3.11'",
    "pyobjc-framework-Quartz ; sys_platform == 'darwin' and python_version >= '3.11'",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend", "ui", "CorridorKeyModule", "gvm_core", "sam2_tracker", "VideoMaMaInferenceModule", "modules/MatAnyone2Module"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv]
torch-backend = "auto"

[tool.uv.sources]
corridorkey-mlx = { git = "https://github.com/nikopueringer/corridorkey-mlx.git", tag = "v1.0.0" }

[tool.pytest.ini_options]
testpaths = ["tests"]
